# gears-rust

./: .cf-studio-kit.toml  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  deny-fips.toml  deny.toml
.cf-studio/: version.toml  whatsnew.toml
.cf-studio/config/: artifacts.toml
.github/workflows/: api_contracts.yml  ci.yml  notify-docs.yml
apps/cf-gears-example-server/: Cargo.toml
apps/cf-gears-example-server/src/: registered_gears.rs
config/: confluence-fallback.txt  e2e-local.yaml  e2e-scope-enforcement.yaml  e2e-tr-authz.yaml  mini-chat-local-test.yaml  mini-chat.yaml  no-auth.yaml  quickstart.yaml
docs/adrs/api-gateway/: 0001-distributed-throttling-cluster-cache.md  0002-throttling-model-config-boundary-and-portability.md
docs/adrs/modkit/: 0002-modkit-auth-oauth2-client.md
docs/api/: api.json
docs/arch/modkit/: DESIGN.md  PRD.md
docs/arch/modkit/ADR/: 0002-cpt-cf-adr-auth-edge-only.md  0003-cpt-cf-adr-rest-first-oop.md  0004-cpt-cf-adr-rest-client-generation.md  0005-cpt-cf-adr-gateway-abstraction.md  0006-cpt-cf-adr-helm-chart-organization.md  0007-cpt-cf-adr-eventual-readiness.md  0008-cpt-cf-adr-internal-module-auth.md  0009-cpt-cf-adr-edge-architecture.md
docs/modkit_unified_system/: README.md
docs/security/: SECURITY.md
docs/security/fips/: PRD.md  TOOLCHAIN.md
docs/security/fips/adrs/: 0005-fips-dependency-policy.md
docs/toolkit_unified_system/: 03_clienthub_and_plugins.md
docs/web-docs/architecture/: index.md
docs/web-docs/concepts/: runtime-and-lifecycle.md
docs/web-docs/get-started/: index.md
docs/web-docs/introduction/: index.md
docs/web-docs/reference/: index.md
examples/oop-gears/calculator-gateway/calculator-gateway/: Cargo.toml
examples/toolkit/users-info/users-info-sdk/: Cargo.toml
gears/bss/ledger/docs/: DESIGN.md
gears/chat-engine/api/: http-protocol.json
gears/chat-engine/chat-engine/: Cargo.toml
gears/chat-engine/chat-engine-sdk/src/: lib.rs  models.rs
gears/chat-engine/chat-engine/src/: lib.rs
gears/chat-engine/chat-engine/tests/: e2e_test.rs
gears/chat-engine/docs/ADR/: 0006-http-client-protocol.md  0023-llm-gateway-plugin.md
gears/chat-engine/docs/features/: context-management.md  llm-gateway-plugin.md  plugin-system.md  session-intelligence.md
gears/credstore/credstore/: Cargo.toml
gears/credstore/credstore-sdk/src/: api.rs  gts.rs  plugin_api.rs
gears/credstore/credstore/src/: gear.rs
gears/file-storage/docs/: DESIGN.md  api.md
gears/file-storage/file-storage/: Cargo.toml
gears/file-storage/file-storage-sdk/: Cargo.toml
gears/file-storage/file-storage-sdk/src/: gts.rs  gts_tests.rs
gears/file-storage/file-storage/src/: gear.rs
gears/file-storage/file-storage/tests/: audit_test.rs  cleanup_test.rs  content_hash_modes_test.rs  enforce_test.rs  finalize_test.rs  idempotency_authz_test.rs  list_authz_test.rs  migration_test.rs  multipart_test.rs  ownership_test.rs  policy_authz_test.rs  service_test.rs  usage_test.rs  version_repo_test.rs
gears/mini-chat/docs/: CYBERCHAT_CONNECTIONS_PANEL_PROMPT.md  DESIGN.md  PRD.md
gears/mini-chat/mini-chat/: Cargo.toml
gears/mini-chat/mini-chat-sdk/src/: audit_models.rs  gts.rs  lib.rs
gears/mini-chat/mini-chat/src/: background_workers.rs  config.rs  gear.rs
gears/model-registry/model-registry-sdk/: Cargo.toml
gears/simple-user-settings/simple-user-settings/: Cargo.toml
gears/simple-user-settings/simple-user-settings/src/: gear.rs
gears/system/account-management/account-management-sdk/: Cargo.toml
gears/system/account-management/docs/: account-management-v1.yaml
gears/system/api-gateway/: Cargo.toml
gears/system/api-gateway/src/: config.rs  gear.rs
gears/system/api-gateway/tests/: access_log_tests.rs  auth_middleware.rs  auth_middleware.rs.orig  body_limit_tests.rs  http_metrics_tests.rs  license_middleware.rs  license_middleware.rs.orig  middleware_order.rs  mime_validation_integration.rs  rate_limit_tests.rs  throttling_tests.rs
gears/system/nodes-registry/nodes-registry/: Cargo.toml
gears/system/nodes-registry/nodes-registry-sdk/: Cargo.toml
gears/system/nodes-registry/nodes-registry/src/api/rest/: error.rs
gears/system/nodes-registry/nodes-registry/tests/: error_tests.rs
gears/system/oagw/oagw/: Cargo.toml
gears/system/oagw/oagw-sdk/: Cargo.toml
gears/system/quota-enforcement/docs/: PRD.md
gears/system/resource-group/resource-group/: Cargo.toml
gears/system/types-registry/types-registry/: Cargo.toml
gears/system/types-registry/types-registry-sdk/: Cargo.toml
guidelines/: GTS.md
libs/modkit-auth/: Cargo.toml
libs/modkit-auth/docs/: design.md
libs/modkit-auth/src/oauth2/: error.rs  fetch.rs  layer.rs  mod.rs  source.rs  token.rs  token_watcher.rs
libs/toolkit-auth/: Cargo.toml
libs/toolkit-auth/src/oauth2/: authcode.rs  authcode_tests.rs  error.rs  mod.rs
libs/toolkit-canonical-errors/: Cargo.toml
libs/toolkit-canonical-errors-macro/: Cargo.toml
libs/toolkit-canonical-errors-macro/src/: lib.rs
libs/toolkit-canonical-errors/src/: builder.rs  error.rs  lib.rs  problem.rs
libs/toolkit-canonical-errors/tests/: axum_integration.rs  error.rs  problem.rs  resource_error_macro.rs  showcase.rs
libs/toolkit-canonical-errors/tests/ui/: missing_field_violation_on_invalid_argument.rs  missing_precondition_violation_on_failed_precondition.rs  missing_quota_violation_on_resource_exhausted.rs  missing_reason_on_aborted.rs  missing_reason_on_out_of_range.rs  missing_reason_on_permission_denied.rs  missing_reason_on_unauthenticated.stderr  missing_resource_on_not_found.rs
libs/toolkit-gts-macros/: Cargo.toml
libs/toolkit-gts-macros/src/: lib.rs
libs/toolkit-gts/src/: lib.rs  permission.rs  plugin.rs
libs/toolkit-gts/tests/: prefix_customization.rs
libs/toolkit-odata/: Cargo.toml
libs/toolkit-odata/src/: errors.rs  problem_mapping.rs
libs/toolkit/src/: client_hub.rs
libs/toolkit/tests/: integration_test.rs
tools/dylint_lints/: Cargo.toml
tools/gts-analyze/: Cargo.toml
tools/gts-analyze/src/scan/: json.rs  mod.rs
tools/scripts/: ci.py  docs-preview.sh
(+515 files in other folders)
