[package]
name = "cf-gears-toolkit-auth"
version = "0.7.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ToolKit authentication library"
readme = "README.md"
keywords = ["constructorfabric", "cf-gears", "cf-gears-toolkit"]
categories = ["development-tools"]
metadata.docs.rs.all-features = true

[lib]
name = "toolkit_auth"

[lints]
workspace = true

[dependencies]
# Core dependencies
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
time = { workspace = true }
arc-swap = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
tower = { workspace = true }
http = { workspace = true }

# HTTP client
toolkit-http = { workspace = true }
url = { workspace = true }

# OAuth2 token lifecycle
rand = { workspace = true }
base64 = { workspace = true }

# Shared utilities
# `toolkit`'s `bootstrap` feature provides `toolkit::bootstrap::crypto::sha256`,
# the FIPS-safe SHA-256 used for the PKCE S256 code-challenge. It routes through
# the process-wide rustls `CryptoProvider` installed at bootstrap (aws-lc-fips
# on Linux, Apple corecrypto on macOS, Windows CNG, or aws-lc-rs in non-FIPS
# builds), so we never link a hash crate (`sha2`/`aws-lc-rs`/`ring`) directly.
toolkit = { workspace = true, features = ["bootstrap"] }
toolkit-utils = { workspace = true, features = ["serde"] }
zeroize = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
http-body-util = { workspace = true }
httpmock = { workspace = true }
# Enable toolkit-http's `otel` feature for examples/tests so the
# `with_otel_metrics*` builder methods are available (see examples/oauth2_metrics.rs).
# Dev-only: a plain `cargo build` of the library does not pull this in.
toolkit-http = { workspace = true, features = ["otel"] }
