[package]
name = "cf-gears-toolkit-canonical-errors-macro"
version = "0.6.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ToolKit canonical errors proc-macro"
keywords = ["constructorfabric", "cf-gears", "cf-gears-toolkit"]
categories = ["development-tools::procedural-macro-helpers"]
metadata.docs.rs.all-features = true

[lib]
proc-macro = true
name = "toolkit_canonical_errors_macro"

[lints]
workspace = true

[dependencies]
proc-macro-crate = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
# For validating the GTS resource type prefix in `#[resource_error("...")]`
# without hard-coding the literal prefix. The prefix is the compile-time
# configured one (`gts_id::GTS_ID_PREFIX`).
gts-id = { workspace = true }
