[package]
name = "gts-analyze"
description = "GTS (Global Type System) module analyzer — types, instances, references."
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "gts-analyze"
path = "src/main.rs"

[dependencies]
syn = { workspace = true, features = ["visit"] }
proc-macro2 = { workspace = true, features = ["span-locations"] }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
# For `GtsId` parsing and the upstream maximum GTS-id length constant.
gts-id = { workspace = true }
# For the compile-time configured GTS ID prefixes re-exported through the
# toolkit GTS facade.
toolkit-gts = { workspace = true }
